# GPicView

./: .gitignore  AUTHORS  README  Readme  Readme.md  configure  configure.ac
data/: Makefile.am  nav_bar.ui  styles.css
src/: Makefile.am  gpicview.c  image-list.c  image-view.c  image-view.h  main-win.c  main-win.h  pref.c  pref.h  ptk-menu.c  working-area.c
src/Imaging/: jpeg-tran.c
src/View/: file-dlgs.c  file-dlgs.h  main-win.c  main-win.h  working-area.h
src/ViewModel/: dialog_service.c  dialog_service.h  image-item.c  image-item.h  main-win-vm.c  main-win-vm.h
